Serbian Translation update (description)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5195 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -141,7 +141,7 @@ foxtrick.ForumNextAndPrevious.desc=Уклања дугмиће 'Наредни' 
 foxtrick.ForumLastPost.desc=Замењује линкове у листи тема на форуму линковима до последње поруке у већ прочитаним темама.
 foxtrick.ForumLastPost.lastpage.desc=Иди на последњу страницу, а не на последњу поруку.
 foxtrick.MatchPlayerColouring.desc=Сенчи играче у меч извештају у зависности од тима за који су играли. Уколико на страницу меч извештаја дођете преко линка на страници играча, само ће тај играч бити осенчен.
-foxtrick.MatchReportFormat.desc=Презентација извештаја по линијaма на основу догађаја са меча. Боје за оквире, позадине и имена клубова можете подесити и сами а за више информација о томе погледајте одељак 'Стилизовање Фокстрика' у језичку 'Помоћ'.
+foxtrick.MatchReportFormat.desc=Презентација извештаја по линијaма на основу догађаја са меча. Боје за оквире, позадине и имена клубова можете подесити и сами а за више информација о томе погледајте одељак 'Стилизовање Фокстрика' у језичку 'О Фокстрику'.
 foxtrick.ForumRedirManagerToTeam.desc=Преусмерава линкове на форуму са странице менаџера на страницу тима.
 foxtrick.ManagerButtons.desc=Додај или промени дугмиће на страници менаџера или тима.
 foxtrick.ManagerButtons.GuestBook.desc=Додаје линк 'Упиши се у књигу гостију' на страницу менаџера.
