--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -75,6 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Додаје иконицу за ИД 
 foxtrick.ForumYouthIcons.youth_series.desc=Додаје иконицу за ИД омладинске лиге.
 foxtrick.ForumYouthIcons.enlarge_input.desc=Повећава поље за поруке ради лакшег писања.
 foxtrick.ForumYouthIcons.pre.desc=Додаје иконицу за Форум 'pre'формат (за постовање HTML тагова) (за девелопере).
+foxtrick.ForumYouthIcons.table.desc=Додаје иконицу за прављење табела на Форуму.
 foxtrick.ShowMessageButton.desc=Додаје дугме 'Пошаљи поруку' на страну са подацима о менаџеру.
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
@@ -463,6 +464,7 @@ ForumSpecialBBCode.article=додај ИД новинског чланка
 ForumSpecialBBCode.clock=додај тренутно време
 ForumSpecialBBCode.spoiler=додај споилер
 ForumSpecialBBCode.pre=додај 'pre' формат таг
+ForumSpecialBBCode.table=додај тагове за табелу (размак раздваја ћелије, нови ред раздваја врсте)
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Упиши име за филтер:
