ForumThreadAutoIgnore module localisation
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5204 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -76,6 +76,9 @@ foxtrick.ForumYouthIcons.youth_series.desc=Додаје иконицу за ИД
 foxtrick.ForumYouthIcons.enlarge_input.desc=Повећава поље за поруке ради лакшег писања.
 foxtrick.ForumYouthIcons.pre.desc=Додаје иконицу за Форум 'pre'формат (за постовање HTML тагова) (за девелопере).
 foxtrick.ForumYouthIcons.table.desc=Додаје иконицу за прављење табела на Форуму.
+foxtrick.ForumThreadAutoIgnore.desc=Аутоматки игнориши теме на форуму уз помоћ одбраних тагова који се појављују у називу.
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Тагови (Уколико користите више тагова раздвојите их зарезом)
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ИД'ови тема које неће бити игнорисане (ИД-ове раздвојите зарезом)
 foxtrick.ShowMessageButton.desc=Додаје дугме 'Пошаљи поруку' на страну са подацима о менаџеру.
 foxtrick.FormatPostingText.desc=Замењује Фокстрикове HT-ML тагове, HTML таговима (на пример: [pre] element) (за девелопере).
 foxtrick.CopyPostID.desc=Преусмеравање ПостИД-а.
