--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Polish language file @r5160
+﻿# Polish language file @r5205
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
@@ -74,7 +74,11 @@ foxtrick.ForumYouthIcons.youth_team.desc=Dodaje ikonkę YouthTeamID
 foxtrick.ForumYouthIcons.youth_match.desc=Dodaje ikonkę YouthMatchID
 foxtrick.ForumYouthIcons.youth_series.desc=Dodaje ikonkę ID ligi juniorów
 foxtrick.ForumYouthIcons.enlarge_input.desc=Powiększa pola tekstowe dla łatwiejszego wypełniania
-foxtrick.ForumYouthIcons.pre.desc=Dodaje ikonkę forum dla formatu 'Pre'
+foxtrick.ForumYouthIcons.pre.desc=Dodaje ikonkę dla formatu 'pre' do pisania na forum
+foxtrick.ForumYouthIcons.table.desc=Dodaje ikonkę 'tabela' do pisania na forum
+foxtrick.ForumThreadAutoIgnore.desc=Automatycznie ignoruj tematy forum z wybranymi tagami
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Tagi
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ID tematów zawsze wyświetlanych
 foxtrick.ShowMessageButton.desc=Dodaje przycisk 'Wyślij wiadomość' na stronie Prezes
 foxtrick.FormatPostingText.desc=Zmienia HT-tagi w tagi HTML (tj. format 'Pre')
 foxtrick.CopyPostID.desc=Zmiany w wyświetlaniu PostID
@@ -323,20 +327,6 @@ foxtrick.CrossTable.allway_show_cross.desc=Zawsze pokazuj tabelę meczów
 foxtrick.CrossTable.allway_show_graph.desc=Zawsze pokazuj wykres pozycji
 foxtrick.CrossTable.GraphHeader.desc=Wykres pozycji
 foxtrick.CrossTable.TableHeader.desc=Tabela meczów
-foxtrick.MatchReportFormat.Text_My_Team.desc=Kolor mojej drużyny
-foxtrick.MatchReportFormat.Text_Home.desc=Kolor gospodarzy
-foxtrick.MatchReportFormat.Text_Away.desc=Kolor gości
-foxtrick.MatchReportFormat.BG_My_Team.desc=Kolor tła zdarzeń mojej drużyny
-foxtrick.MatchReportFormat.BG_Home.desc=Kolor tła zdarzeń gospodarzy
-foxtrick.MatchReportFormat.BG_Away.desc=Kolor tła zdarzeń gości
-foxtrick.MatchReportFormat.border_width_normal.desc=Szerokość ramki przy zwykłych wydarzeniach
-foxtrick.MatchReportFormat.border_width_goal.desc=Szerokość ramki przy golach
-foxtrick.MatchReportFormat.border_color_non_goal.desc=Kolor ramki przy zdarzeniach
-foxtrick.MatchReportFormat.border_color_goal_my.desc=Kolor ramki przy moich golach
-foxtrick.MatchReportFormat.border_color_goal_home.desc=Kolor ramki przy golach gospodarzy
-foxtrick.MatchReportFormat.border_color_goal_away.desc=Kolor ramki przy golach gości
-foxtrick.MatchReportFormat.normaltext.desc=Kolor tła normalnego tekstu
-foxtrick.MatchReportFormat.half_time.desc=Kolor tła zdarzeń przerwy i ustawienia
 foxtrick.YouthSkillHideUnknown.desc=Zwiększa ilość wolnego miejsca na stronie Juniorów
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Ukrywaj nieznane umiejętności juniorów
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ukrywaj maksymalną wartość umiejętnośći, aby uzyskać więcej wolnego miejsca
@@ -378,6 +368,10 @@ foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Kopiuj w formacie HT-ML
 foxtrick.YouthSeriesEstimation.desc=Przy wyszukiwaniu ligii juniorów, pokazuje szacunkowy termin jej startu
 foxtrick.LocalTime.desc=Opcjonalnie pokazuje czas lokalny zamiast czasu Hattricka. Kliknięcie na zegar przełącza między tymi dwoma czasami.
 foxtrick.LocalTime.DefaultLocal.desc=Pokazuj czas lokalny domyślnie
+foxtrick.ForumThreadAutoIgnore.desc=Automatycznie ignoruj na forum tematy z wybranymi tagami ([ATag] lub {ATag})
+foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata seperated tags, eg: NT, idea, Bug.
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze wyświetlanych
+
 # -----------------------------------------------------------------------------
 
 
@@ -477,6 +471,7 @@ ForumSpecialBBCode.article=Wstaw articleID
 ForumSpecialBBCode.clock=Wstaw aktualny czas
 ForumSpecialBBCode.spoiler=Wstaw spoiler
 ForumSpecialBBCode.pre=Wstaw tag 'Pre'
+ForumSpecialBBCode.table=Wstaw tagi tabeli (spacja oddziela komórki, nowa linia = nowy wiersz)
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Nazwij filtr:
