Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5226 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -452,6 +452,9 @@ sendmessage=Пошаљи
 #Forums
 foxtrick.CopyPostID=Кликни да ископираш ИД поруке у меморију
 foxtrick.CopyPosting=Копирај пост у меморију
+style_ht-ml=HT-ML стил
+style_wiki=wiki стил
+style_raw=обичан текст
 
 ForumYouthIcons.label=Линкови за омладинце
 ForumYouthIcons.labelToolbar=Главни линкови
