Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5227 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -470,8 +470,8 @@ ForumSpecialBBCode.article=додај ИД новинског чланка
 ForumSpecialBBCode.clock=додај тренутно време
 ForumSpecialBBCode.spoiler=додај споилер
 ForumSpecialBBCode.pre=додај 'pre' формат таг
-ForumSpecialBBCode.table=додај тагове за табелу.Нови ред раздваја врсте а колоне се тренутно одвајају знаком:
-ForumSpecialBBCode.tableSeparator=Колоне раздвој знаком:
+ForumSpecialBBCode.table=додај тагове за табелу.Нови ред раздваја врсте а ћелије се тренутно одвајају знаком "%s"
+ForumSpecialBBCode.tableSeparator=Ћелије раздвој знаком "%s"
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Упиши име за филтер:
