--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -453,10 +453,11 @@ sendmessage=Пошаљи
 
 #Forums
 foxtrick.CopyPostID=Кликни да ископираш ИД поруке у меморију
-foxtrick.CopyPosting=Копирај пост у меморију
-style_ht-ml=HT-ML стил
-style_wiki=wiki стил
-style_raw=обичан текст
+CopyPosting=Копирај пост у %s стилу
+CopyPosting.abbr=%s
+CopyPosting.style.ht-ml='HT-ML' 
+CopyPosting.style.wiki='Wiki'
+CopyPosting.style.raw='текст'
 
 ForumYouthIcons.label=Линкови за омладинце
 ForumYouthIcons.labelToolbar=Главни линкови
