--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Polish language file @r5205
+﻿# Polish language file @r5249
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
@@ -19,7 +19,7 @@ foxtrick.MoveLinks.desc=Przenosi ligę oraz flagę prezesa do nagłówka wiadomo
 foxtrick.AttVsDef.desc=Dodaje porównanie ataku do obrony w komentarzu meczowym
 foxtrick.AttVsDef.oldstyle.desc=Stary styl
 foxtrick.AttVsDef.newstyle.desc=Nowy styl
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Stary styl (rzuty wolne pośrednie osobno)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Stary styl (rzuty wolne pośrednie osobno)
 foxtrick.Ratings.desc=Pokazuje oceny w komentarzu meczowym
 foxtrick.BookmarkAdjust.desc=Zmienia ikonę przypisaną do zakładki poprzez wstawienie jako komentarz do zakładki odpowiedniego kodu w nawiasie kwadratowym: np. [cyan] spowoduje pokazanie sinoniebieskiej (cyjanowej) ikony. Możliwe wartości: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Wyświetla powiadomienie w formie pop-up'u o zdarzeniach widocznych w powiadamiaczu dla Supporterów oraz włącza alert dźwiękowy
@@ -76,10 +76,6 @@ foxtrick.ForumYouthIcons.youth_series.desc=Dodaje ikonkę ID ligi juniorów
 foxtrick.ForumYouthIcons.enlarge_input.desc=Powiększa pola tekstowe dla łatwiejszego wypełniania
 foxtrick.ForumYouthIcons.pre.desc=Dodaje ikonkę dla formatu 'pre' do pisania na forum
 foxtrick.ForumYouthIcons.table.desc=Dodaje ikonkę 'tabela' do pisania na forum
-foxtrick.ForumThreadAutoIgnore.desc=Automatycznie ignoruj tematy forum z wybranymi tagami
-foxtrick.ForumThreadAutoIgnore.Tags.desc=Tagi
-foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=ID tematów zawsze wyświetlanych
-foxtrick.ShowMessageButton.desc=Dodaje przycisk 'Wyślij wiadomość' na stronie Prezes
 foxtrick.FormatPostingText.desc=Zmienia HT-tagi w tagi HTML (tj. format 'Pre')
 foxtrick.CopyPostID.desc=Zmiany w wyświetlaniu PostID
 foxtrick.CopyPostID.AddCopyIcon.desc=Dodaje ikonkę 'Kopiuj postID' przed pierwszym postId
@@ -97,8 +93,8 @@ foxtrick.LinksEconomy.desc=Dodaje linki do zewnętrznych stron w sekcji Finanse
 foxtrick.LinksYouthOverview.desc=Dodaje linki do zewnętrznych stron na stronie głównej juniorów
 foxtrick.LinksYouthTraining.desc=Dodaje linki do zewnętrznych stron na stronie treningu juniorów
 foxtrick.LinksYouthPlayerDetail.desc=Dodaje linki do zewnętrznych stron na stronie juniora
-foxtrick.LinksYouthPlayerlist.desc=Dodaje linki do zewnętrznych stron w sekcji Juniorzy
-foxtrick.LinksYouthMatchlist.desc=Dodaje linki do zewnętrznych stron w sekcji meczów juniorów
+foxtrick.LinksYouthPlayerList.desc=Dodaje linki do zewnętrznych stron w sekcji Juniorzy
+foxtrick.LinksYouthMatchList.desc=Dodaje linki do zewnętrznych stron w sekcji meczów juniorów
 foxtrick.LinksArena.desc=Dodaje linki do zewnętrznych stron w sekcji Stadion
 foxtrick.LinksCoach.desc=Dodaje linki do zewnętrznych stron w dziale Zmień trenera
 foxtrick.LinksPlayerDetail.desc=Dodaje linki do zewnętrznych stron na stronie zawodnika
@@ -362,15 +358,13 @@ foxtrick.RapidId.desc=Dodaje na górze strony formularz szybkiego sprawdzania dr
 foxtrick.ReadHtPrefsFromHeader.desc=Automatycznie dostosuj ustawienia dla FoxTrick'a
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Wybierz język
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Wybierz kraj, datę i walutę
-foxtrick.CopyPosting.CopyUnformatted.desc=Kopiuj bez formatowania
-foxtrick.CopyPosting.CopyWikiStyle.desc=Kopiuj w stylu wiki.hattrick
-foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Kopiuj w formacie HT-ML
 foxtrick.YouthSeriesEstimation.desc=Przy wyszukiwaniu ligii juniorów, pokazuje szacunkowy termin jej startu
 foxtrick.LocalTime.desc=Opcjonalnie pokazuje czas lokalny zamiast czasu Hattricka. Kliknięcie na zegar przełącza między tymi dwoma czasami.
 foxtrick.LocalTime.DefaultLocal.desc=Pokazuj czas lokalny domyślnie
 foxtrick.ForumThreadAutoIgnore.desc=Automatycznie ignoruj na forum tematy z wybranymi tagami ([ATag] lub {ATag})
-foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata seperated tags, eg: NT, idea, Bug.
+foxtrick.ForumThreadAutoIgnore.Tags.desc=List of commata separated tags, eg: NT, idea, Bug.
 foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze wyświetlanych
+foxtrick.ForumTableSort.desc=Umożliwia sortowanie po nagłówku tabel na forum
 
 # -----------------------------------------------------------------------------
 
@@ -455,7 +449,11 @@ sendmessage=Wyślij
 
 #Forums
 foxtrick.CopyPostID=Kopiuj postID do schowka
-foxtrick.CopyPosting=Kopiuj nick postującego do schowka
+CopyPosting=Kopiuj w stylu %s
+CopyPosting.abbr=Kopiuj w stylu %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=raw
 
 ForumYouthIcons.label=Linki juniorów
 ForumYouthIcons.labelToolbar=Linki domyślne
@@ -471,7 +469,8 @@ ForumSpecialBBCode.article=Wstaw articleID
 ForumSpecialBBCode.clock=Wstaw aktualny czas
 ForumSpecialBBCode.spoiler=Wstaw spoiler
 ForumSpecialBBCode.pre=Wstaw tag 'Pre'
-ForumSpecialBBCode.table=Wstaw tagi tabeli (spacja oddziela komórki, nowa linia = nowy wiersz)
+ForumSpecialBBCode.table=Wstaw tagi tabeli (nowa linia = nowy wiersz, nowa kolumna = "%s")
+ForumSpecialBBCode.tableSeparator=Konwertuj "%s" do komórek
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Nazwij filtr:
