--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -19,7 +19,7 @@ foxtrick.MoveLinks.desc=Muta linkurile seriei si steagul la antetul mesajului. N
 foxtrick.AttVsDef.desc=Adauga raportul atac/aparare la pagina meciului
 foxtrick.AttVsDef.oldstyle.desc=Stilul vechi
 foxtrick.AttVsDef.newstyle.desc=Stilul nou
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Stilul vechi (fazele fixe separate)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Stilul vechi (fazele fixe separate)
 foxtrick.Ratings.desc=Adauga ratinguri la pagina meciului
 foxtrick.BookmarkAdjust.desc=Modificati pictograma asociata bookmark-ului inserand in comentariul bookmark-ului codul corespunzator intre paranteze patrate: de exemplu: [cyan] va arata pictograma cyan. Valori posibile: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow.
 foxtrick.FoxtrickAlert.desc=Afiseaza o notificare de tip pop-up cu Hattrick News Ticker, chiar si atunci cand faceti altceva ceva in momentul respectiv (de asemenea reda un sunet la evenimente din ticker)
@@ -71,8 +71,8 @@ foxtrick.ForumYouthIcons.youth_team.desc=Adauga iconita pentru ID-ul echipei de 
 foxtrick.ForumYouthIcons.youth_match.desc=Adauga iconita pentru ID-ul meciului juniorilor
 foxtrick.ForumYouthIcons.youth_series.desc=Adauga iconita pentru ID-ul seriei juniorilor
 foxtrick.ForumYouthIcons.enlarge_input.desc=Mareste casutele text pentru a usura scrierea
-foxtrick.ForumYouthIcons.pre.desc=Adauga icoana pentru 'pre' formatul forumului
-foxtrick.ShowMessageButton.desc=Adauga un buton: Trimite mesaj la pagina managerului
+foxtrick.ForumYouthIcons.pre.desc=Adauga icoanita pentru 'pre' formatul forumului
+foxtrick.ForumYouthIcons.table.desc=Adauga iconita pentru tabel
 foxtrick.FormatPostingText.desc=Inlocuieste tagurile Foxtrick HT-ML cu taguri HTML
 foxtrick.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze pe forum
 foxtrick.CopyPostID.AddCopyIcon.desc=Adauga o iconita 'Copiaza Id-ul postului' inainte primului postID
@@ -90,6 +90,8 @@ foxtrick.LinksEconomy.desc=Adauga legaturi externe la pagina finantelor
 foxtrick.LinksYouthOverview.desc=Adauga legaturi externe la pagina 'Generalitati' de la echipa de juniori
 foxtrick.LinksYouthTraining.desc=Adauga legaturi externe la pagina antrenamentelor de la juniori
 foxtrick.LinksYouthPlayerDetail.desc=Adauga legaturi externe la pagina detaliata a juniorilor
+foxtrick.LinksYouthPlayerList.desc=Adauga legaturi externe la pagina juniorilor
+foxtrick.LinksYouthMatchList.desc=Adauga legaturi externe la pagina meciurilor de juniori
 foxtrick.LinksArena.desc=Adauga legaturi externe la pagina stadionului
 foxtrick.LinksCoach.desc=Adauga legaturi externe la pagina 'Schimba antrenorul'
 foxtrick.LinksPlayerDetail.desc=Adauga legaturi externe la pagina detaliata a unui jucator
@@ -223,13 +225,13 @@ foxtrick.TickerColoring.Hover.desc=Culoare personalizata in Ticker pentru mesaje
 foxtrick.ExtraShortcuts.desc=Adauga scurtaturi la scurtaturile principale (sus dreapta)
 foxtrick.ExtraShortcuts.AddLeft.desc=Bifeaza sa le asezi in stanga, debifeaza pentru dreapta
 foxtrick.ExtraShortcuts.AddSpace.desc=Mareste spatiul pentru iconitele scurtatura
-foxtrick.ExtraShortcuts.Supporterstats.desc=Pictograma link catre statistici supporter
-foxtrick.ExtraShortcuts.Transfers.desc=Pictograma link catre transferurile proprii
-foxtrick.ExtraShortcuts.Prefs.desc=Pictograma link catre pagina preferintelor
-foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Pictograma link catre pagina de preferinte FoxTrick
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Scurtatura link catre Radio Hattrick (Belgia/Olanda) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Scurtatura link catre Radio Hattrick (Belgia/Olanda) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Scurtatura link catre Radio downtime (Germania) (Winamp)
+foxtrick.ExtraShortcuts.Supporterstats.desc=Link catre statistici supporter
+foxtrick.ExtraShortcuts.Transfers.desc=Link catre transferurile proprii
+foxtrick.ExtraShortcuts.Prefs.desc=Link catre pagina preferintelor
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Link catre pagina de preferinte FoxTrick
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Link catre Radio Hattrick (Belgia/Olanda) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Link catre Radio Hattrick (Belgia/Olanda) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Link catre Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copiaza ID-ul meciului cand dai click pe pictograma meciurilor liga/cupa/amical sau meciurilor din arhiva. Pentru suporteri functioneaza si pe pagina 'Meciuri directe'
 foxtrick.HeaderFix.desc=Fixeaza antetul in timpul scrollului
 foxtrick.HeaderFix.FixLeft.desc=De asemenea fixeaza submeniul in timpul scrollului
@@ -318,20 +320,6 @@ foxtrick.CrossTable.allway_show_cross.desc=Arata mereu Tabelul incrucisat
 foxtrick.CrossTable.allway_show_graph.desc=Arata mereu graficul seriei
 foxtrick.CrossTable.GraphHeader.desc=Grafic sezon
 foxtrick.CrossTable.TableHeader.desc=Tabel incrucisat al sezonului
-foxtrick.MatchReportFormat.Text_My_Team.desc=Culoarea numelui echipei mele
-foxtrick.MatchReportFormat.Text_Home.desc=Culoarea echipei gazda
-foxtrick.MatchReportFormat.Text_Away.desc=Culoarea echipei vizitatoare
-foxtrick.MatchReportFormat.BG_My_Team.desc=Culoarea de fundal a evenimentelor echipei mele
-foxtrick.MatchReportFormat.BG_Home.desc=Culoarea de fundal a evenimentelor echipei gazda
-foxtrick.MatchReportFormat.BG_Away.desc=Culoarea de fundal a evenimentelor a echipei vizitatoare
-foxtrick.MatchReportFormat.border_width_normal.desc=Chenar pentru evenimente normale
-foxtrick.MatchReportFormat.border_width_goal.desc=Chenar pentru evenimente de tip gol
-foxtrick.MatchReportFormat.border_color_non_goal.desc=Culoarea chenarului la evenimente non-gol
-foxtrick.MatchReportFormat.border_color_goal_my.desc=Culoarea chenarului la evenimente gol ale echipei mele
-foxtrick.MatchReportFormat.border_color_goal_home.desc=Culoarea chenarului la evenimente gol ale echipei gazda
-foxtrick.MatchReportFormat.border_color_goal_away.desc=Culoarea chenarului la evenimente ale echipei vizitatoare
-foxtrick.MatchReportFormat.normal_text.desc=Culoarea fundalului ale textului normal
-foxtrick.MatchReportFormat.half_time.desc=Culoarea fundalului la textele de pauza si primul 11
 foxtrick.YouthSkillHideUnknown.desc=Mai mult spatiu la pagina juniorilor
 foxtrick.YouthSkillHideUnknown.desc=Ascunde calitatile juniorilor care sunt necunoscute
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Ascunde cuvantul 'maxim' pentru a castiga spatiu
@@ -367,12 +355,13 @@ foxtrick.RapidId.desc=O casuta in susul paginii pentru a vedea echipa, jucatorul
 foxtrick.ReadHtPrefsFromHeader.desc=Modifica setarile automat pentru FoxTrick
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Setarea limbii
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Setare tara, data si moneda
-foxtrick.CopyPosting.CopyUnformatted.desc=Copiaza in stil neformatat
-foxtrick.CopyPosting.CopyWikiStyle.desc=Copiaza in stilul wiki.hattrick.org
-foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Copiaza in stilul HT-ML
 foxtrick.YouthSeriesEstimation.desc=In momentul cautarii, estimeaza momentul startului ligii de juniori care sunt in pauza competitionala
 foxtrick.LocalTime.desc=Arata optional ora locala in locul orei HT.Clickuind pe ceas se schimba intre cele doua optiuni.
 foxtrick.LocalTime.DefaultLocal.desc=Arata ora locala ca implicita
+foxtrick.ForumThreadAutoIgnore.desc=Ignora automat topicurile cand selectezi tag-uri (topicuri cu [Tag] sau {Tag}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista tag-uri, exemple: NT, idee, Bug.
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista alba a topicurilor dupa ID. Topicurile din lista alba nu vor fi ignorate.
+foxtrick.TableSort.desc=Fac toate tabelele sortabile daca au antet. (inclusiv tabelele de pe forum)
 -----------------------------------------------------------------------------
 
 
@@ -456,7 +445,11 @@ sendmessage=Trimite
 
 #Forums
 foxtrick.CopyPostID=Copiaza postID in clipboard
-foxtrick.CopyPosting=Copiaza mesajul in curs de postare in clipboard
+CopyPosting=Copiaza in stilul %s
+CopyPosting.abbr=Copiaza in stilul %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=coloana
 
 ForumYouthIcons.label=Linkuri juniori
 ForumYouthIcons.labelToolbar=Linkuri principale
@@ -472,6 +465,7 @@ ForumSpecialBBCode.article=Adauga link catre articol
 ForumSpecialBBCode.clock=Adauga ora actuala
 ForumSpecialBBCode.spoiler=Adauga spoiler
 ForumSpecialBBCode.pre=Insereaza tag-ul format 'pre'
+ForumSpecialBBCode.table=Formatul de inserat tabele. Coverteste textul selectat intr-un tabel (Liniile sunt convertite in randuri, textele separate de %s vor fi transformate in celule)
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Introduceti numele filtrului:
