CopyScoutReport message fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5266 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -718,6 +718,7 @@ foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Копирај извештај са тренига у меморију
 foxtrick.tweaks.copyskilltable=Копирај табелу са вештинама у меморију (у ХТ форум стилу)
 foxtrick.tweaks.copyscoutreport=Копирај kоментар ловца на таленте у меморију
+foxtrick.tweaks.scoutreportcopied=Kоментар ловца на таленте је ископиран у меморију.
 foxtrick.tweaks.copyplayerscource=Копирај изворни код играча у меморију
 foxtrick.tweaks.reportcopied=Извештај/Коментар је ископиран у меморију.
 foxtrick.tweaks.playersourcecopied=Изворни код играча је ископиран у меморију.
