--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -61,11 +61,7 @@ foxtrick.TeamPopupLinksMore.desc=Zeigt in dem Popups einen 'Mehr...' Link an, de
 foxtrick.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum. Über die Textfelder können eigene Style-Formate (HTML style Attribut) definiert werden.
 foxtrick.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 foxtrick.StaffMarker.own.desc=Eigene Aliase
-foxtrick.StaffMarker.editor.desc=Editoren
-foxtrick.StaffMarker.foxtrick-dev.desc=FoxTrick-Entwickler sowie Übersetzer
-foxtrick.StaffMarker.flag.desc=Anzeige der jeweiligen Länderflaggen in der Select Box
-foxtrick.StaffMarker.chpp-holder.desc=CHPP-holder
-foxtrick.StaffMarker.hty_staff.desc=HT-Youthclub Mitarbeiter
+foxtrick.StaffMarker.flag.desc=Flaggen in den Auswahlboxen anzeigen
 foxtrick.ForumYouthIcons.desc=Anzeige einer Linkleiste für das Jugendinternat
 foxtrick.ForumYouthIcons.user_id.desc=Icon für UserID hinzufügen
 foxtrick.ForumYouthIcons.kit_id.desc=Icon für KitID hinzufügen
@@ -79,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Icon für YouthMatchID hinzufügen
 foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
-foxtrick.ShowMessageButton.desc=Fügt einen 'Nachricht senden'-Button der Managerseite hinzu
+foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'table'-Format hinzufügen
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPostID.AddCopyIcon.desc=Hinzufügen eines Icons für das Kopieren der ersten PostID
@@ -97,6 +93,8 @@ foxtrick.LinksEconomy.desc=Links hinzufügen auf der Finanzen-Seite
 foxtrick.LinksYouthOverview.desc=Links hinzufügen auf der Jugend-Seite
 foxtrick.LinksYouthTraining.desc=Links hinzufügen auf der Jugendtraining-Seite
 foxtrick.LinksYouthPlayerDetail.desc=Links hinzufügen auf der Jugend-Spielerdetails-Seite
+foxtrick.LinksYouthPlayerList.desc=Links hinzufügen auf der Jugend-Spieler-Seite
+foxtrick.LinksYouthMatchList.desc=Links hinzufügen auf der Jugend-Spiele-Seite
 foxtrick.LinksArena.desc=Links hinzufügen auf der Stadion-Seite
 foxtrick.LinksCoach.desc=Links hinzufügen zur Training-Seite
 foxtrick.LinksPlayerDetail.desc=Links hinzufügen zur Spieler-Seite
@@ -318,27 +316,10 @@ foxtrick.SkillColoring.skill_select.desc = Skills auch in der Transfersuche als 
 foxtrick.SkillColoring.no_skill_links.desc=Entfernt den Linkstyle von Skills
 foxtrick.BackgroundFixed.desc=Statisches Hintergrundbild
 foxtrick.MatchIncome.desc=Zeigt Zuschauereinnahmen unter der Zuschauerverteilung an
-foxtrick.MatchPlayerColouring.MyTeam.desc=Mein Team
-foxtrick.MatchPlayerColouring.Home.desc=Heimmannschaft
-foxtrick.MatchPlayerColouring.Away.desc=Auswärtsmannschaft
 foxtrick.CrossTable.allway_show_cross.desc=Kreuztabelle immer anzeigen
 foxtrick.CrossTable.allway_show_graph.desc=Saisonverlauf immer anzeigen
 foxtrick.CrossTable.GraphHeader.desc=Saisonverlauf
 foxtrick.CrossTable.TableHeader.desc=Kreuzvergleich
-foxtrick.MatchReportFormat.Text_My_Team.desc=Farbe meines Teamnamens
-foxtrick.MatchReportFormat.Text_Home.desc=Farbe des Heimteams
-foxtrick.MatchReportFormat.Text_Away.desc=Farbe des Auswärtsteams
-foxtrick.MatchReportFormat.BG_My_Team.desc=Hintergrundfarbe meiner Teamereignisse
-foxtrick.MatchReportFormat.BG_Home.desc=Hintergrundfarbe Heim-Teamereignisse
-foxtrick.MatchReportFormat.BG_Away.desc=Hintergrundfarbe Auswärts-Teamereignisse
-foxtrick.MatchReportFormat.border_width_normal.desc=Border-with bei normalen Ereignissen
-foxtrick.MatchReportFormat.border_width_goal.desc=Border-width bei Toren
-foxtrick.MatchReportFormat.border_color_non_goal.desc=Border-color bei normalen Ereignissen
-foxtrick.MatchReportFormat.border_color_goal_my.desc=Border-color bei Toren für mein Team
-foxtrick.MatchReportFormat.border_color_goal_home.desc=Border-color bei Toren für das Heimteam
-foxtrick.MatchReportFormat.border_color_goal_away.desc=Border-color bei Toren für das Auswärtsteam
-foxtrick.MatchReportFormat.normaltext.desc=Hintergrundfarbe bei normalen Ereignissen
-foxtrick.MatchReportFormat.half_time.desc=Hintergrundfarbe bei Halbzeitständen und Aufstellungstexten
 foxtrick.YouthSkillHideUnknown.desc=Verstecken unbekannter Skills in der Übersicht der Jugendspieler
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Verberge unbekannte Skills auf der Jugend-Übersichtsseite
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Verberge das Wort 'maximal' um mehr Platz zu erhalten wenn die Gesichter angezeigt werden
@@ -360,11 +341,7 @@ foxtrick.MatchTables.desc=Entfernt Freiräume in den Tabellen im simple design
 foxtrick.MatchTables.RemoveTime.desc=Entfernt Anstosszeiten aus der Tabelle der aktuellen Spiele
 foxtrick.YouthPromotes.desc=Anzeige der Tage, bis ein Jugendspieler gezogen werden kann
 foxtrick.htmsStatistics.desc=Hinzufügen von Ergebnis-Statistiken zu Spielen
-foxtrick.htmsStatistics.Home.desc=Individuelle Farbe für Sieg
-foxtrick.htmsStatistics.Draw.desc=Individuelle Farbe für Unentschieden
-foxtrick.htmsStatistics.Away.desc=Individuelle Farbe für Niederlage
 foxtrick.HighlightBotTeams.desc=Hervorheben von 'Bot'-Teams auf der Ligaseite
-foxtrick.HighlightBotTeams.ChooseColorHighlight.desc=Individuelle Einstellung des Highlights
 foxtrick.LastLogin.desc=Anzeige der Zeitdifferenz bei den letzten logins auf der Manager Seite
 foxtrick.TransferCompareSort.desc=Klick auf den Tabellenkopf beim Transververgleich sortiert das Ergebnis nach TSI, Preis oder Form
 foxtrick.ForumStripHattrickLinks.desc=Entfernen der Server-Strings von internen HT-Links um diese im Forum benutzbar zu machen
@@ -378,12 +355,13 @@ foxtrick.RapidId.desc=Anzeige einer Inputbox zum schnellen navigieren zu Spielen
 foxtrick.ReadHtPrefsFromHeader.desc=Automatisch die FoxTrick-Einstellungen setzen
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Spracheinstellungen
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Land, Datumsformat und Währung einstellen
-foxtrick.CopyPosting.CopyUnformatted.desc=Kopiert unformatiert
-foxtrick.CopyPosting.CopyWikiStyle.desc=Kopiert für wiki.hattrick.org
-foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Kopiert mit HT-ML (=zitieren)
-foxtrick.YouthSeriesEstimation.desc=In search result table, estimates the start time of youth series that are in season break.
+foxtrick.YouthSeriesEstimation.desc=Zeigt bei den Jugendligasucheergebnissen die geschätze Startzeit der Liga an
 foxtrick.LocalTime.desc=Zeigt lokale anstatt der HT-Zeit an. Ein Klick auf die laufende Zeitanzeige wechselt die Anzeige
 foxtrick.LocalTime.DefaultLocal.desc=Beim Start lokale Zeit anzeigen
+foxtrick.ForumThreadAutoIgnore.desc=Automatisch Forumthemen mit ausgewählten Tags ignorieren (Themen mit [Tag] or {Tag}).
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Liste der Tags, ZB: NT, idea, Bug. Kommagetrennt, unabhängig von Griss/Kleinschreibung. 
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Whitelist von Themen nach ID (der Teil vor dem Punkt). Themen in der Whitelist werden nicht ignoriert. Komma getrennt.
+foxtrick.TableSort.desc=Macht alle 'richtigen' Tabellen mit Kopfzeile in Hattrick sortierbar (inklusive Tabellen in Postings)
 
 # -----------------------------------------------------------------------------
 
@@ -468,7 +446,11 @@ sendmessage=Absenden
 
 #Forums
 foxtrick.CopyPostID=In die Zwischenablage kopieren
-foxtrick.CopyPosting=Kopiere Posting in die Zwischenablage
+CopyPosting=Kopiere Posting im %s Stil in die Zwischenablage
+CopyPosting.abbr=Kopiere in %s Stil
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=unformatiert
 
 ForumYouthIcons.label=Jugendlinks
 ForumYouthIcons.labelToolbar=Hauptlinks
@@ -477,7 +459,6 @@ ForumYouthIcons.youthteamid=Jugendteam verlinken
 ForumYouthIcons.youthmatchid=Link zu Jugendspiel einfügen
 ForumYouthIcons.youthseries=Link zu Jugendliga einfügen
 #special bbcode, not really youth icons
-ForumSpecialBBCode.hr=Horizontale Linie einfügen
 ForumSpecialBBCode.br=Zeilenumbruch einfügen
 ForumSpecialBBCode.user=UserID einfügen
 ForumSpecialBBCode.kit=KitID einfügen
@@ -485,6 +466,8 @@ ForumSpecialBBCode.article=ArticleID einfügen
 ForumSpecialBBCode.clock=aktuelle Zeit einfügen
 ForumSpecialBBCode.spoiler=Spoiler hinzufügen
 ForumSpecialBBCode.pre='pre' Format-Tag einfügen
+ForumSpecialBBCode.table=Fügt 'table'-Tags ein bzw. konvertiert den ausgewählten Text in ein Tabelle (Linien werden zu Reihen. Durch "%s" getrennter Text wird zu Zellen.)
+ForumSpecialBBCode.tableSeparator=Konvertiert "%s" in Zellen
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Filtername:
@@ -687,6 +670,9 @@ FoxtrickMyHtReleaseNotesLink=http://www.ht-foxtrick.com/forum/viewforum.php?f=7
 FoxtrickMyHtHelpPage=FoxTrick-Hilfeforum (English, German, Spanish, Italian):
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=12625445
 
+StyleTutorial.title=Styling FoxTrick
+StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you could use CSS to define your preferred style.\nAn example user style file could be found at %s, and you could modify it to satisfy your need.\nAfter saving the file, you could use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
+
 # changes categories
 new=Neu
 fix=Fix
@@ -707,7 +693,6 @@ foxtrick.tweaks.overview=Übersicht
 foxtrick.tweaks.writeinguestbook=Eintrag im Gästebuch verfassen
 foxtrick.tweaks.copyplayerad=Spieleranzeige in die Zwischenablage kopieren
 foxtrick.tweaks.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
-foxtrick.tweaks.bornin=Heimatland
 HatStatsDetailed=HatStats (Details)
 HatStatsTotalOnly=HatStats (nur Gesamt)
 foxtrick.tweaks.copyratings=Ratings in die Zwischenablage kopieren (HT-ML Code style)
@@ -718,6 +703,7 @@ foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiere Trainingsreport in die Zwischenablage
 foxtrick.tweaks.copyskilltable=Skilltabelle in die Zwischenablage kopieren (HT Forum Style)
 foxtrick.tweaks.copyscoutreport=Scoutbericht in Zwischenablage Kopieren
+foxtrick.tweaks.scoutreportcopied=Der Scoutbericht wurde in die Zwischenablage kopiert.
 foxtrick.tweaks.copyplayerscource=Kopiere HTML Quellcode in die Zwischenablage
 foxtrick.tweaks.reportcopied=Trainingsreport in die Zwischenablage kopiert.
 foxtrick.tweaks.playersourcecopied=HTML Quellcode wurde in die Zwischenablage kopiert
@@ -848,6 +834,7 @@ Filter=Filter
 # buttons
 button.ok=OK
 button.cancel=Abbrechen
+button.close=Schliessen
 
 # End of IN-GAME STRINGS.
 
@@ -917,7 +904,6 @@ delete_foxtrick_branches_ask=Wirklich alle Einstellungen zurücksetzen?\n FireFo
 disable_all_foxtrick_moduls_ask=Sollen wirklich alle Module deaktiviert werden?\n
 
 foxtrick.prefs.AdditionalOptions=Erweiterte Einstellungen
-foxtrick.prefs.copyfeedback=Anzeige einer Bestätigung nach der Benutzung des 'Kopiere in die Zwischenablage'-Buttons
 foxtrick.prefs.smallcopyicons=Kleine Copy icons anstelle von einer extra Box
 foxtrick.prefs.DisplayHTMLDebugOutput=Anzeige von Debuginformationen auf der Hattrickseite (für Entwickler)
 
