--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Polish language file @r5249
+﻿# Polish language file @r5281
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
@@ -679,7 +679,7 @@ FoxtrickMyHtHelpPage=Pomoc po polsku na forum Hattricka:
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=13254684
 
 StyleTutorial.title=Styling FoxTrick
-StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you could use CSS to define your preferred style.\nAn example user style file could be found at %s, and you could modify it to satisfy your need.\nAfter saving the file, you could use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
+StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you can use CSS to define your preferred style.\nAn example user style file can be found at %s, and you can modify it to satisfy your need.\nAfter saving the file, you can use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
 
 # changes categories
 new=Nowy
@@ -711,13 +711,14 @@ foxtrick.tweaks.youthclub=Akcje
 foxtrick.tweaks.copytrainingreport=Kopiuj raport treningowy do schowka
 foxtrick.tweaks.copyskilltable=Kopiuj umiejętności do schowka
 foxtrick.tweaks.copyscoutreport=Kopiuj raport skauta do schowka
+foxtrick.tweaks.scoutreportcopied=Raport skauta został skopiowany do schowka.
 foxtrick.tweaks.copyplayerscource=Kopiuj umiejętności do schowka
 foxtrick.tweaks.reportcopied=Zrobione!
 foxtrick.tweaks.playersourcecopied=Zrobione!
 foxtrick.tweaks.yskilltablecopied=Zrobione!
 foxtrick.tweaks.matchidcopied=Zrobione!
-foxtrick.tweaks.postidcopied=Zrobione!
-foxtrick.tweaks.postingcopied=Zrobione!
+foxtrick.tweaks.postidcopied=Post [post=%s] został skopiowany do schowka!
+foxtrick.tweaks.postingcopied=Postujący %s został skopiowany do schowka!
 
 #matches
 foxtrick.matches.attackdefensebars=Atak vs Obrona
