--- a/content/locale/de/releaseNotes.xml
+++ b/content/locale/de/releaseNotes.xml
@@ -17,7 +17,7 @@
 <lines>CopyPlayerAd : Jetzt auch für Jugenspieler und sortiert nach Skillhöhe .</lines>
 
 <lines></lines> 
-<lines>Attention!</lines>
+<lines>Achtung!</lines>
 <lines>Alle Foxtrick-Stiloption wurden in eine userstyle Datei verschoben. Alte Farbeinstellungen sind verloren. Siehe Hilfetab für Instruktionen um Foxtrickstile zu verändern</lines>
  	
 <lines></lines> 
