ftteamstats: sections optional
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5295 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -58,7 +58,7 @@ foxtrick.HTDateFormat.LocalSaison.desc=Anzeige der lokalen Saison anstelle der g
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Einen anderen Tag als Wochenanfang einstellen (0 = Montag, -2 = Samstag)
 foxtrick.TeamPopupLinks.desc=Anzeige eines kleinen Popups über den Teamnamen mit Direktlinks
 foxtrick.TeamPopupLinksMore.desc=Zeigt in dem Popups einen 'Mehr...' Link an, der weitere Links im Popup anzeigt
-foxtrick.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum. Über die Textfelder können eigene Style-Formate (HTML style Attribut) definiert werden.
+foxtrick.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum.
 foxtrick.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 foxtrick.StaffMarker.own.desc=Eigene Aliase
 foxtrick.StaffMarker.flag.desc=Flaggen in den Auswahlboxen anzeigen
@@ -148,6 +148,11 @@ foxtrick.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf de
 foxtrick.ManagerButtons.LargeSendMail.desc=Grosse Mailbox statt der kleinen öffnen
 foxtrick.HTThreadMarker.desc=Hebt den Titel von Threads hervor, welche von HT's erstellt wurden
 foxtrick.FTTeamStats.desc=Anzeige weiterer Informationen über das Team
+foxtrick.FTTeamStats.General.desc=Allgmeine Information (TSI/Alter)
+foxtrick.FTTeamStats.Speciality.desc=Spezialitäten
+foxtrick.FTTeamStats.Personality.desc=Personalität
+foxtrick.FTTeamStats.Status.desc=Status (Karten/Verletzungen)
+foxtrick.FTTeamStats.Current_league.desc=Aktuelle Liga
 foxtrick.ExtraPlayerInfo.desc=Zusätzliche Spielerinformationen auf der Spielerseite anzeigen
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Anzeige der Ausrichtung des aktuellen bzw. der ehemaligen Trainer
 foxtrick.ExtraPlayerInfo.Flag.desc=Nationalitätenflaggen zufügen.
