pages (manager) fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5302 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Icon für YouthMatchID hinzufügen
 foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
-foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'table'-Format hinzufügen
+foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPostID.AddCopyIcon.desc=Hinzufügen eines Icons für das Kopieren der ersten PostID
